Fri Feb 28 22:53:55 2003  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* win32/win32.c (flock): maps error code.

	* win32/win32.c (win32_asynchronize): returns errno from child
	  thread.

	* win32/win32.c (win32_fclose, win32_close): ensures unlocked.

Wed Feb 26 00:02:41 2003  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* string.c (rb_str_dup): set FL_EXIVAR when copied generic ivar.
	  (ruby-bugs-ja:PR#400)

Sun Feb 23 14:39:40 2003  WATANABE Hirofumi  <eban@ruby-lang.org>

	* intern.h (rb_define_private_method): duplicated.

	* configure.in (__NO_ISOCEXT): need not to add this definition on
	  MinGW.

Sat Feb 22 02:45:20 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_thread_create): may called from place higher than
	  rb_gc_stack_start.

	* gc.c (Init_stack): update rb_gc_stack_start if it is lower (or
	  higher if stack grows down) than the previous value.

Fri Feb 21 17:19:27 2003  WATANABE Hirofumi  <eban@ruby-lang.org>

	* eval.c (rb_f_require): do not need to abort if a DLEXT file
	  is not found.

Thu Feb 20 23:11:42 2003  Akinori MUSHA  <knu@iDaemons.org>

	* mdoc2man.rb: New file.  A mdoc to man converter ported from
	  Perl. [merged from 1.8]

	* configure.in (MANTYPE): Detect if the system's nroff(1) groks
	  mdoc.  Provide a new option --with-mantype={doc|man} in case the
	  check does not work as expected. [merged from 1.8]

	* Makefile.in (MANTYPE): Define MANTYPE and pass it to
	  instruby.rb. [merged from 1.8]

	* instruby.rb: Convert mdoc manpages to man for systems which
	  nroff(1) does not grok mdoc. [merged from 1.8]

Tue Feb 18 21:39:27 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (argf_to_io): should prefetch argv.

Fri Feb 14 14:25:24 2003  akira yamada  <akira@arika.org>

	* lib/uri/generic.rb, lib/uri/ldap.rb, lib/uri/mailto.ldap: all foo=()
	  returns arguments passed by caller.

	* lib/uri/generic.rb (Generic#to_str, Generic#to_s): removed to_str.