@@ -1,7 +1,5 @@
-case RUBY_PLATFORM
-when /cygwin/,/mingw/
-  $CFLAGS = "-fno-defer-pop -fno-omit-frame-pointer"
-  create_makefile("Win32API")
-when /win32/
+require 'mkmf'
+
+if have_header("windows.h") and have_library("kernel32")
   create_makefile("Win32API")
 end
