@@ -1,11 +1,11 @@
 #define RUBY_VERSION "1.6.8"
-#define RUBY_RELEASE_DATE "2003-02-28"
+#define RUBY_RELEASE_DATE "2003-03-07"
 #define RUBY_VERSION_CODE 168
-#define RUBY_RELEASE_CODE 20030228
+#define RUBY_RELEASE_CODE 20030307
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 6
 #define RUBY_VERSION_TEENY 8
 #define RUBY_RELEASE_YEAR 2003
-#define RUBY_RELEASE_MONTH 02
-#define RUBY_RELEASE_DAY 28
+#define RUBY_RELEASE_MONTH 03
+#define RUBY_RELEASE_DAY 07
